--- a/src/main/resources/view/forgotPasswordForm.fxml
+++ b/src/main/resources/view/forgotPasswordForm.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="pane" prefHeight="900.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.coir.controller.ForgotPasswordFormController">
+<AnchorPane fx:id="pane" prefHeight="798.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.coir.controller.ForgotPasswordFormController">
    <children>
-      <ImageView fitHeight="719.0" fitWidth="1040.0" layoutX="-55.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="800.0" fitWidth="1222.0" layoutX="-21.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assests/image/overhead-view-woman-making-string-with-jute-string-textured-backdrop.jpg" />
          </image>
