--- a/src/main/resources/view/loginPageForm.fxml
+++ b/src/main/resources/view/loginPageForm.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="pane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="960.0" style="-fx-background-color: #F9F5F6;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.coir.controller.LoginPageFormController">
+<AnchorPane fx:id="pane" prefHeight="798.0" prefWidth="960.0" style="-fx-background-color: #F9F5F6;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.coir.controller.LoginPageFormController">
    <children>
-      <ImageView fitHeight="719.0" fitWidth="1040.0" layoutX="-2.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="806.0" fitWidth="1198.0" layoutX="-55.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assests/image/overhead-view-woman-making-string-with-jute-string-textured-backdrop.jpg" />
          </image>
