--- a/src/main/resources/view/forgotPasswordForm.fxml
+++ b/src/main/resources/view/forgotPasswordForm.fxml
@@ -38,9 +38,9 @@
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="85.0" fitWidth="98.0" layoutX="152.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView blendMode="MULTIPLY" fitHeight="142.0" fitWidth="203.0" layoutX="105.0" layoutY="-16.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../assests/image/ceilan-coir-products-high-resolution-logo-black-transparent%20(1).png" />
+                  <Image url="@../assests/image/ceilan-high-resolution-logo.png" />
                </image>
             </ImageView>
          </children>
