--- a/src/main/resources/view/dashboardForm.fxml
+++ b/src/main/resources/view/dashboardForm.fxml
@@ -126,7 +126,7 @@
             <Rectangle arcHeight="5.0" arcWidth="5.0" blendMode="MULTIPLY" fill="#db9b47" height="95.0" layoutX="37.0" layoutY="112.0" stroke="BLACK" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="3.0" width="240.0" />
             <Label fx:id="txtCustomercount" layoutX="150.0" layoutY="111.0" prefHeight="52.0" prefWidth="49.0" text="5" textFill="#602c09">
                <font>
-                  <Font name="System Bold Italic" size="56.0" />
+                  <Font name="System Bold" size="56.0" />
                </font>
             </Label>
             <Text layoutX="61.0" layoutY="198.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Customer  Count" wrappingWidth="281.421142578125">
@@ -151,13 +151,13 @@
             </Text>
             <Label fx:id="txtItemTypes" layoutX="444.0" layoutY="112.0" prefHeight="52.0" prefWidth="49.0" text="5" textFill="#602c09">
                <font>
-                  <Font name="System Bold Italic" size="56.0" />
+                  <Font name="System Bold" size="56.0" />
                </font>
             </Label>
             <Rectangle arcHeight="5.0" arcWidth="5.0" blendMode="MULTIPLY" fill="#db9b47" height="95.0" layoutX="618.0" layoutY="114.0" stroke="BLACK" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="3.0" width="240.0" />
             <Label fx:id="txtEmployeeCount" layoutX="743.0" layoutY="111.0" prefHeight="52.0" prefWidth="49.0" text="5" textFill="#602c09">
                <font>
-                  <Font name="System Bold Italic" size="56.0" />
+                  <Font name="System Bold" size="56.0" />
                </font>
             </Label>
             <ImageView blendMode="MULTIPLY" fitHeight="61.0" fitWidth="67.0" layoutX="685.0" layoutY="117.0" pickOnBounds="true" preserveRatio="true">
@@ -167,7 +167,7 @@
             </ImageView>
             <AnchorPane blendMode="MULTIPLY" layoutX="111.0" layoutY="359.0" prefHeight="307.0" prefWidth="649.0" style="-fx-background-radius: 20; -fx-background-color: #D57149;">
                <children>
-                  <Text fill="WHITE" layoutX="30.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="A coir related products management system is a software tool designed to streamline the management of products made from coir, a natural fiber extracted from the husk of coconut. The system can be used by businesses that manufacture or sell coir products, such as mats, rugs, ropes, and brushes." wrappingWidth="597.3961486816406">
+                  <Text fill="#3b2f14" layoutX="30.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="A coir related products management system is a software tool designed to streamline the management of products made from coir, a natural fiber extracted from the husk of coconut. The system can be used by businesses that manufacture or sell coir products, such as mats, rugs, ropes, and brushes." wrappingWidth="597.3961486816406">
                      <font>
                         <Font name="Abyssinica SIL" size="27.0" />
                      </font>
