--- a/src/main/resources/view/deliveryForm.fxml
+++ b/src/main/resources/view/deliveryForm.fxml
@@ -10,16 +10,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" blendMode="MULTIPLY" prefHeight="703.0" prefWidth="1212.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.coir.controller.DeliveryFormController">
+<AnchorPane fx:id="root" blendMode="MULTIPLY" prefHeight="806.0" prefWidth="1459.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.coir.controller.DeliveryFormController">
    <children>
       <Label layoutX="7.0" layoutY="3.0" text="Delivery Manage" textFill="#744717">
          <font>
             <Font name="System Bold" size="28.0" />
          </font>
       </Label>
-      <TextField fx:id="txtDeliveryId" layoutX="28.0" layoutY="69.0" onAction="#txtDeliveryIdSearchOnAction" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
-      <TextField fx:id="txtLocation" layoutX="31.0" layoutY="134.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
-      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="455.0" layoutY="2.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: blue;" styleClass="btn" stylesheets="@../style/style.css" text="Save" textFill="WHITE">
+      <TextField fx:id="txtDeliveryId" layoutX="35.0" layoutY="116.0" onAction="#txtDeliveryIdSearchOnAction" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <TextField fx:id="txtLocation" layoutX="34.0" layoutY="187.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="455.0" layoutY="3.0" onAction="#btnSaveOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: blue;" styleClass="btn" stylesheets="@../style/style.css" text="Save" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -27,7 +27,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="564.0" layoutY="17.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: darkOrange;" styleClass="btn" stylesheets="@../style/style.css" text="Update" textFill="WHITE">
+      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="564.0" layoutY="40.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: darkOrange;" styleClass="btn" stylesheets="@../style/style.css" text="Update" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -35,7 +35,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="672.0" layoutY="2.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: red;" styleClass="btn" stylesheets="@../style/style.css" text="Delete" textFill="WHITE">
+      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="669.0" layoutY="5.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: red;" styleClass="btn" stylesheets="@../style/style.css" text="Delete" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -43,7 +43,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="778.0" layoutY="21.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: gray;" styleClass="btn" stylesheets="@../style/style.css" text="Clear" textFill="WHITE">
+      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="779.0" layoutY="42.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: gray;" styleClass="btn" stylesheets="@../style/style.css" text="Clear" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -51,55 +51,55 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="859.0" layoutY="621.0" onAction="#btnBackOnAction" prefHeight="11.0" prefWidth="89.0" style="-fx-background-color: BROWN;" styleClass="btn" stylesheets="@../style/style.css" text="Back" textFill="WHITE">
+      <JFXButton buttonType="RAISED" layoutX="1122.0" layoutY="721.0" onAction="#btnBackOnAction" prefHeight="11.0" prefWidth="89.0" style="-fx-background-color: BROWN;" styleClass="btn" stylesheets="@../style/style.css" text="Back" textFill="WHITE">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <TextField fx:id="txtOrderId" layoutX="298.0" layoutY="71.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
-      <TextField fx:id="txtDeliveryStatus" layoutX="301.0" layoutY="135.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
-      <TableView fx:id="tblDelivery" layoutX="33.0" layoutY="214.0" prefHeight="437.0" prefWidth="769.0" style="-fx-border-color: black;">
+      <TextField fx:id="txtOrderId" layoutX="299.0" layoutY="116.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <TextField fx:id="txtDeliveryStatus" layoutX="301.0" layoutY="190.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <TableView fx:id="tblDelivery" layoutX="33.0" layoutY="249.0" prefHeight="510.0" prefWidth="815.0" style="-fx-border-color: black;">
          <columns>
             <TableColumn fx:id="colDeliveryId" prefWidth="96.66668701171875" text="Delivery Id" />
             <TableColumn fx:id="colOrderId" prefWidth="120.6666259765625" text="Order Id" />
             <TableColumn fx:id="colEmployeeId" prefWidth="152.6666259765625" text="Employee Id" />
             <TableColumn fx:id="colLocation" prefWidth="164.6666259765625" text="Location" />
             <TableColumn fx:id="colDeliveryStatus" prefWidth="127.0" text="Delivery Status" />
-            <TableColumn fx:id="colEmail" prefWidth="104.66664632161462" text="Email" />
+            <TableColumn fx:id="colEmail" prefWidth="150.4000122070313" text="Email" />
          </columns>
       </TableView>
-      <Label layoutX="27.0" layoutY="52.0" text="Delivery Id*" textFill="#363232">
+      <Label layoutX="36.0" layoutY="88.0" text="Delivery Id*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="297.0" layoutY="55.0" text="Order Id*" textFill="#363232">
+      <Label layoutX="299.0" layoutY="91.0" text="Order Id*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="30.0" layoutY="117.0" text="Location" textFill="#363232">
+      <Label layoutX="34.0" layoutY="161.0" text="Location*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="301.0" layoutY="118.0" text="Delivery Status" textFill="#363232">
+      <Label layoutX="302.0" layoutY="164.0" text="Delivery Status*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="569.0" layoutY="119.0" text="Employee Id*" textFill="#363232">
+      <Label layoutX="570.0" layoutY="164.0" text="Employee Id*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="568.0" layoutY="56.0" text="Email" textFill="#363232">
+      <Label layoutX="569.0" layoutY="91.0" text="Email*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <ComboBox fx:id="cmbEmployee" layoutX="569.0" layoutY="136.0" onAction="#cmbEmployeeOnAction" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
-      <JFXButton fx:id="btnEmail" buttonType="RAISED" contentDisplay="RIGHT" layoutX="465.0" layoutY="174.0" onAction="#btnEmailOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: blue;" styleClass="btn" stylesheets="@../style/style.css" text="Email" textFill="WHITE">
+      <ComboBox fx:id="cmbEmployee" layoutX="570.0" layoutY="191.0" onAction="#cmbEmployeeOnAction" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <JFXButton fx:id="btnEmail" buttonType="RAISED" contentDisplay="RIGHT" layoutX="818.0" layoutY="151.0" onAction="#btnEmailOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: blue;" styleClass="btn" stylesheets="@../style/style.css" text="Email" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -107,6 +107,6 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <ComboBox fx:id="cmbEmail" layoutX="569.0" layoutY="72.0" onAction="#cmbEmailOnAction" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <ComboBox fx:id="cmbEmail" layoutX="569.0" layoutY="117.0" onAction="#cmbEmailOnAction" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
    </children>
 </AnchorPane>
