--- a/src/main/resources/view/employeeForm.fxml
+++ b/src/main/resources/view/employeeForm.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" blendMode="MULTIPLY" prefHeight="703.0" prefWidth="1212.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.coir.controller.EmployeeFormController">
+<AnchorPane fx:id="root" blendMode="MULTIPLY" prefHeight="806.0" prefWidth="1459.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.coir.controller.EmployeeFormController">
    <children>
       <Label layoutX="4.0" layoutY="2.0" text="Employee Manage" textFill="#744717">
          <font>
@@ -27,7 +27,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="683.0" layoutY="39.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: darkOrange;" styleClass="btn" stylesheets="@../style/style.css" text="Update" textFill="WHITE">
+      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="683.0" layoutY="42.0" onAction="#btnUpdateOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: darkOrange;" styleClass="btn" stylesheets="@../style/style.css" text="Update" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -35,7 +35,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="593.0" layoutY="73.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: red;" styleClass="btn" stylesheets="@../style/style.css" text="Delete" textFill="WHITE">
+      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="593.0" layoutY="87.0" onAction="#btnDeleteOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: red;" styleClass="btn" stylesheets="@../style/style.css" text="Delete" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -43,7 +43,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="686.0" layoutY="108.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: gray;" styleClass="btn" stylesheets="@../style/style.css" text="Clear" textFill="WHITE">
+      <JFXButton buttonType="RAISED" contentDisplay="RIGHT" layoutX="706.0" layoutY="123.0" onAction="#btnClearOnAction" prefHeight="33.0" prefWidth="106.0" style="-fx-background-color: gray;" styleClass="btn" stylesheets="@../style/style.css" text="Clear" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -51,68 +51,64 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="867.0" layoutY="628.0" onAction="#btnBackOnAction" prefHeight="34.0" prefWidth="89.0" style="-fx-background-color: brown;" styleClass="btn" stylesheets="@../style/style.css" text="Back" textFill="WHITE">
+      <JFXButton buttonType="RAISED" layoutX="1125.0" layoutY="724.0" onAction="#btnBackOnAction" prefHeight="34.0" prefWidth="89.0" style="-fx-background-color: brown;" styleClass="btn" stylesheets="@../style/style.css" text="Back" textFill="WHITE">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <TextField fx:id="txtName" layoutX="305.0" layoutY="76.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
-      <TextField fx:id="txtTel" layoutX="37.0" layoutY="133.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
-      <TableView fx:id="tblEmployee" layoutX="38.0" layoutY="248.0" prefHeight="412.0" prefWidth="785.0" style="-fx-border-color: black;">
+      <TextField fx:id="txtName" layoutX="305.0" layoutY="74.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <TextField fx:id="txtTel" layoutX="37.0" layoutY="139.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <TableView fx:id="tblEmployee" layoutX="38.0" layoutY="251.0" prefHeight="510.0" prefWidth="874.0" style="-fx-border-color: black;">
          <columns>
             <TableColumn fx:id="colId" prefWidth="98.66668701171875" text="Employee Id" />
             <TableColumn fx:id="colName" minWidth="1.99993896484375" prefWidth="128.6666259765625" text="Employee Name" />
             <TableColumn fx:id="colEmail" minWidth="0.666748046875" prefWidth="190.0" text="Email" />
-            <TableColumn fx:id="colJob" minWidth="0.0" prefWidth="0.0" text="Job Title" />
-            <TableColumn fx:id="colTel" prefWidth="91.333251953125" text="Tel" />
-            <TableColumn fx:id="colJob" prefWidth="133.3333740234375" text="Job Title " />
-            <TableColumn fx:id="colSalary" prefWidth="146.0001220703125" text="Salary" />
-            <TableColumn fx:id="colDate" prefWidth="41.9998779296875" text="Date" />
+            <TableColumn fx:id="colJob" minWidth="0.0" prefWidth="111.20004272460938" text="Job Title" />
+            <TableColumn fx:id="colTel" prefWidth="118.39990234375" text="Tel" />
+            <TableColumn fx:id="colSalary" prefWidth="113.86663818359375" text="Salary" />
+            <TableColumn fx:id="colDate" prefWidth="111.73345947265625" text="Date" />
          </columns>
       </TableView>
-      <Label layoutX="36.0" layoutY="56.0" text="Employee Id*" textFill="#363232">
+      <Label layoutX="36.0" layoutY="48.0" text="Employee Id*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="305.0" layoutY="59.0" text="Employee Name" textFill="#363232">
+      <Label layoutX="305.0" layoutY="49.0" text="Employee Name*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="txtEmail" layoutX="582.0" layoutY="194.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
-      <TextField fx:id="txtjOB" layoutX="308.0" layoutY="134.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <TextField fx:id="txtEmail" layoutX="582.0" layoutY="204.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <TextField fx:id="txtjOB" layoutX="308.0" layoutY="140.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
       <Label layoutX="581.0" layoutY="178.0" text="Email*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="309.0" layoutY="116.0" text="Job Title" textFill="#363232">
+      <Label layoutX="309.0" layoutY="116.0" text="Job Title*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="37.0" layoutY="118.0" text="Tel" textFill="#363232">
+      <Label layoutX="37.0" layoutY="113.0" text="Tel*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="txtSalary" layoutX="309.0" layoutY="194.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
-      <Label layoutX="309.0" layoutY="177.0" text="Salary" textFill="#363232">
+      <TextField fx:id="txtSalary" layoutX="309.0" layoutY="203.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <Label layoutX="309.0" layoutY="177.0" text="Salary*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <TextField fx:id="txtDate" layoutX="38.0" layoutY="193.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
-      <Label layoutX="38.0" layoutY="175.0" text="Date" textFill="#363232">
+      <TextField fx:id="txtDate" layoutX="39.0" layoutY="202.0" prefHeight="33.0" prefWidth="230.0" style="-fx-border-color: black;" />
+      <Label layoutX="38.0" layoutY="175.0" text="Date*" textFill="#363232">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
       <ImageView fitHeight="17.0" fitWidth="1.0" layoutX="876.0" layoutY="273.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../../../thogakade-mvc4/src/main/resources/icon/save.png" />
-         </image>
       </ImageView>
    </children>
 </AnchorPane>
